# llms_local_test

./: .gitignore  README.md  README_CN.md  docker-compose.yml  pyproject.toml
.github/workflows/: benchmark.yml
reports/: benchmark_Qwen_Qwen3-Coder-Next-FP8.md  benchmark_Qwen_Qwen3.5-35B-A3B.md  benchmark_glm-4.7-flash.md
scripts/: benchmark.py  benchmark_config.yaml
