[project]
name = "llm-benchmark"
version = "1.0.0"
description = "Local LLM performance benchmarking toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[dependency-groups]
dev = ["pytest>=7.0.0"]

[tool.uv]
package = false

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
